# cosmos-transfer2.5

./: .gitignore  Dockerfile  plot_optical_flow.ipynb  pyproject.toml
cosmos_transfer2/: config.py  inference.py  multiview.py
cosmos_transfer2/_src/av/bidirectional/tokenizers/: interface.py  wan2pt1.py
cosmos_transfer2/_src/av/bidirectional/utils/: context_parallel.py  tokenizer_benchmarking.py
cosmos_transfer2/_src/av/causal/causal_training/schedulers/: flow_match.py
cosmos_transfer2/_src/av/causal/fast_infer/utils/: profile.py
cosmos_transfer2/_src/av/causal/fast_infer/v2/: attn.py  context_parallel_strategy.py  demo_cosmos2.py  fused_rms_norm.py  minimal_v4_dit.py  network_cosmos2.py  text_encoder.py  wan2pt1_tokenizer.py
cosmos_transfer2/_src/av/causal/fast_infer/v2/tests/: templated_benchmark.py
cosmos_transfer2/_src/av/causal/light_tokenizers/: __init__.py  tae.py  utils.py  vae.py  vae_tiny.py
cosmos_transfer2/_src/imaginaire/utils/: checkpoint_db.py
cosmos_transfer2/_src/imaginaire/visualize/: video.py
cosmos_transfer2/_src/interactive/callbacks/: every_n_draw_sample_distilled.py  wandb_log_rcm.py
cosmos_transfer2/_src/interactive/conditioner/: condition_postprocessors.py
cosmos_transfer2/_src/interactive/configs/registry_defaults/: condition_postprocessor.py  model.py  teacher_model_paths.py
cosmos_transfer2/_src/interactive/configs/registry_experiment/: experiment_list.py  experiments_diffusion_forcing_cl.py  experiments_dmd2_cl.py  experiments_self_forcing_cl.py
cosmos_transfer2/_src/interactive/inference/: eval_fast_infer_cl_hf.py
cosmos_transfer2/_src/interactive/methods/: cosmos2_interactive_model.py  diffusion_forcing.py
cosmos_transfer2/_src/interactive/methods/distribution_matching/: dmd2.py  self_forcing.py  self_forcing_cl.py
cosmos_transfer2/_src/interactive/networks/: dit_cl_causal.py
cosmos_transfer2/_src/interactive/trainer/: trainer_distillation.py
cosmos_transfer2/_src/interactive/utils/: model_loader.py
cosmos_transfer2/_src/predict2/: conditioner.py
cosmos_transfer2/_src/predict2/inference/: get_t5_emb.py
cosmos_transfer2/_src/predict2/models/: text2world_model_rectified_flow.py  video2world_model_rectified_flow.py
cosmos_transfer2/_src/transfer2/auxiliary/optical_flow/: raft_flow_model.py
cosmos_transfer2/_src/transfer2/configs/vid2vid_transfer/defaults/: conditioner.py
cosmos_transfer2/_src/transfer2/datasets/augmentors/: control_input.py
cosmos_transfer2/_src/transfer2/inference/: inference_pipeline.py  inference_pipeline_test.py  utils.py
cosmos_transfer2/_src/transfer2/models/: vid2vid_model_control_vace.py  vid2vid_model_control_vace_rectified_flow.py
docker/: docker-compose.yml  jd.Dockerfile  nightly.Dockerfile
docs/: inference.md  inference_image.md  inference_robot_multiview_control.md  post-training_agibot_multiview.md
examples/: inference.py  robot_multiview_agibot_control.py
scripts/: precompute_text_embeddings.py
